--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "^5.0.0",
     "@ngrx/store": "^4.1.1",
     "@nsalaun/ng-logger": "^5.0.0",
+    "angular2-notifications": "^0.9.6",
     "codelyzer": "^4.0.1",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
