--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,29 +12,31 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.0.0",
-    "@angular/cdk": "^5.0.0-rc0",
-    "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",
-    "@angular/core": "^5.0.0",
-    "@angular/forms": "^5.0.0",
-    "@angular/http": "^5.0.0",
-    "@angular/material": "^5.0.0-rc0",
-    "@angular/platform-browser": "^5.0.0",
-    "@angular/platform-browser-dynamic": "^5.0.0",
-    "@angular/router": "^5.0.0",
+    "@angular/animations": "^5.1.0",
+    "@angular/cdk": "^5.0.1",
+    "@angular/common": "^5.1.0",
+    "@angular/compiler": "^5.1.0",
+    "@angular/core": "^5.1.0",
+    "@angular/forms": "^5.1.0",
+    "@angular/http": "^5.1.0",
+    "@angular/material": "^5.0.1",
+    "@angular/platform-browser": "^5.1.0",
+    "@angular/platform-browser-dynamic": "^5.1.0",
+    "@angular/router": "^5.1.0",
     "@ngrx/store": "^4.1.1",
     "@nsalaun/ng-logger": "^5.0.0",
     "angular2-notifications": "^0.9.6",
-    "codelyzer": "^4.0.1",
-    "core-js": "^2.4.1",
+    "codelyzer": "^4.0.2",
+    "core-js": "^2.5.3",
     "hammerjs": "^2.0.8",
     "ngx-cookie": "^2.0.1",
-    "node-sass": "^4.6.1",
-    "rxjs": "^5.5.2",
+    "node-sass": "^4.7.2",
+    "rxjs": "^5.5.5",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
+    "@angular-devkit/core": "0.0.22",
+    "@angular-devkit/schematics": "0.0.41",
     "@angular/cli": "^1.6.0",
     "@angular/compiler-cli": "^5.0.0",
     "@angular/language-service": "^5.0.0",
