Add missing ca-certificates to final image

--- a/Dockerfile.release
+++ b/Dockerfile.release
@@ -50,6 +50,8 @@ FROM alpine
 
 RUN apk add --no-cache bash
 
+RUN apk add --no-cache ca-certificates
+
 WORKDIR /app
 
 COPY --from=builder /app/server /app/server
